force-app/main/default/objects/OrgChartPlus__ADP_OrgChart__c/OrgChartPlus__ADP_OrgChart__c.object-meta.xml
<CustomObject>
    <label>ADP OrgChart</label>
    <nameField>
        <label>OrgChart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADP OrgCharts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>