force-app/main/default/objects/OrgChartPlus__ADP_OrgChart__c/fields/OrgChartPlus__Account__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ADP OrgCharts</relationshipLabel>
    <relationshipName>OrgChart</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>