force-app/main/default/objects/OrgChartPlus__ADP_OrgChart__c/fields/OrgChartPlus__AutomaticChart__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__AutomaticChart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Chart</label>
    <type>Checkbox</type>
</CustomField>