force-app/main/default/objects/OrgChartPlus__ADP_OrgChart__c/fields/OrgChartPlus__ContactFilter__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ContactFilter__c</fullName>
    <label>Contact Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>