force-app/main/default/objects/OrgChartPlus__ADP_OrgChart__c/fields/OrgChartPlus__Version__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__Version__c</fullName>
    <label>Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>